added comment and updated api
